# Threading_Mini_Project

./: CMakeLists.txt  README.md  main.cpp  worker_thread.h
C++_samples/: auto_pointers.cpp  function_placeholders.cpp  pointers.cpp  rvalue.cpp  uniform_init.cpp
C++_samples/C++_Rampup/Exceptions/: exception_handling1.cpp  exception_handling2.cpp  exception_handling3.cpp  exception_handling4.cpp  exception_handling5.cpp
C++_samples/C++_Rampup/Friend/: friend.cpp
C++_samples/C++_Rampup/Lambda_Functions/: lambda_function.cpp
C++_samples/C++_Rampup/Map/: map_introduction.cpp
C++_samples/C++_Rampup/Networking/: client.c  server.c
C++_samples/C++_Rampup/Shared_Pointer/: auto_pointers.cpp  shared_pointers.cpp
C++_samples/C++_Rampup/Singleton/: Factory_pattern.cpp  Factory_pattern_actual_method.cpp  singleton_pattern.cpp  singleton_pattern_actual_method.cpp
C++_samples/C++_Rampup/Templates/: Templates.txt  class_templates.cpp  functional_templates.cpp  non_type_parameters_templates.cpp  templates_specialization.cpp
C++_samples/C++_Rampup/Vector/: .vector_introduction.cpp.swp  vector_creation.cpp  vector_initialization.cpp  vector_introduction.cpp  vector_size.cpp
inc/: primary_thread.h  worker_thread.h
src/: UnitTest.cpp  main.cpp  primary_thread.cpp  worker_thread.cpp
